<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bg_gradient">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/txt_login"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/colorfontwhite"
        android:textStyle="bold"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"/>
    <RelativeLayout
        android:id="@+id/box_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_login"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_centerInParent="true">
        <TextView
            android:id="@+id/txt_email"
            android:text="@string/email"
            android:textSize="15sp"
            android:textColor="@color/colorfontwhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_email"
            android:textSize="16sp"
            android:textColor="@color/colorfontwhite"
            android:background="@drawable/bg_edittext"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/txt_email"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"/>

        <TextView
            android:id="@+id/txt_password"
            android:text="@string/password"
            android:textSize="15sp"
            android:textColor="@color/colorfontwhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_email"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/edt_password"
            android:textColor="@color/colorfontwhite"
            android:textSize="16sp"
            android:background="@drawable/bg_edittext"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/txt_password"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:inputType="textPassword"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/colorfontwhite"
            android:text="Masuk"
            android:textColor="@color/colorGradient2"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_below="@id/edt_password"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/box_login"
        android:layout_marginTop="8dp">
        <TextView
            android:id="@+id/txt_ready_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Belum punya akun ?"
            android:textSize="15sp"
            android:textColor="@color/colorfontwhite"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/txt_ready_account"
            android:text=" Daftar"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/colorfontwhite"
            android:onClick="Daftar"/>
    </RelativeLayout>
</RelativeLayout>